--- a/tab.ui
+++ b/tab.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QStackedWidget" name="pages">
      <property name="currentIndex">
-      <number>0</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="main_pw">
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -57,7 +57,7 @@
           <item>
            <widget class="QLineEdit" name="pw_edit">
             <property name="echoMode">
-             <enum>QLineEdit::Password</enum>
+             <enum>QLineEdit::EchoMode::Password</enum>
             </property>
            </widget>
           </item>
@@ -79,7 +79,7 @@
           <item>
            <widget class="QDialogButtonBox" name="pw_bts">
             <property name="standardButtons">
-             <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+             <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
             </property>
            </widget>
           </item>
@@ -161,7 +161,7 @@
        <item>
         <widget class="QScrollArea" name="scrollArea">
          <property name="frameShape">
-          <enum>QFrame::NoFrame</enum>
+          <enum>QFrame::Shape::NoFrame</enum>
          </property>
          <property name="widgetResizable">
           <bool>true</bool>
@@ -172,7 +172,7 @@
             <x>0</x>
             <y>0</y>
             <width>737</width>
-            <height>420</height>
+            <height>417</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -233,13 +233,13 @@
               <item row="6" column="2">
                <widget class="QLineEdit" name="edit_secret">
                 <property name="contextMenuPolicy">
-                 <enum>Qt::DefaultContextMenu</enum>
+                 <enum>Qt::ContextMenuPolicy::DefaultContextMenu</enum>
                 </property>
                 <property name="text">
                  <string/>
                 </property>
                 <property name="echoMode">
-                 <enum>QLineEdit::Normal</enum>
+                 <enum>QLineEdit::EchoMode::Normal</enum>
                 </property>
                 <property name="placeholderText">
                  <string>0123 4567 89ab cdef ghij klmn opqr stuv</string>
@@ -272,7 +272,7 @@
                  <string>Notes:</string>
                 </property>
                 <property name="alignment">
-                 <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+                 <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
                 </property>
                </widget>
               </item>
@@ -285,7 +285,7 @@
            <item>
             <widget class="Line" name="line">
              <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+              <enum>Qt::Orientation::Horizontal</enum>
              </property>
             </widget>
            </item>
@@ -371,7 +371,7 @@
                <widget class="QDateTimeEdit" name="edit_origin">
                 <property name="dateTime">
                  <datetime>
-                  <hour>14</hour>
+                  <hour>9</hour>
                   <minute>0</minute>
                   <second>0</second>
                   <year>1969</year>
@@ -388,14 +388,14 @@
                 </property>
                 <property name="time">
                  <time>
-                  <hour>14</hour>
+                  <hour>9</hour>
                   <minute>0</minute>
                   <second>0</second>
                  </time>
                 </property>
                 <property name="minimumDateTime">
                  <datetime>
-                  <hour>14</hour>
+                  <hour>9</hour>
                   <minute>0</minute>
                   <second>0</second>
                   <year>1969</year>
@@ -412,7 +412,7 @@
                 </property>
                 <property name="minimumTime">
                  <time>
-                  <hour>14</hour>
+                  <hour>9</hour>
                   <minute>0</minute>
                   <second>0</second>
                  </time>
@@ -424,7 +424,7 @@
                  <bool>true</bool>
                 </property>
                 <property name="timeSpec">
-                 <enum>Qt::UTC</enum>
+                 <enum>Qt::TimeSpec::UTC</enum>
                 </property>
                </widget>
               </item>
@@ -487,7 +487,7 @@
        <item>
         <widget class="QDialogButtonBox" name="edit_bts">
          <property name="standardButtons">
-          <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
+          <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Save</set>
          </property>
         </widget>
        </item>
@@ -533,10 +533,13 @@
           </font>
          </property>
          <property name="text">
-          <string>Right click on the QR code and click &quot;Copy Image&quot;. Then, click &quot;Yes&quot; here. If you are unable to copy the image, click &quot;No&quot;.</string>
+          <string>If you want to use a QR code to setup this entry, right-click the QR code image and choose &quot;Copy Image&quot;.
+If you were able to copy the image, choose &quot;Yes&quot;; if you couldn't, choose &quot;No&quot;.
+
+If you want to setup this entry manually, don't see a QR code, or see an error over the buttons below, choose &quot;No&quot;.</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
@@ -559,12 +562,24 @@
          <property name="text">
           <string>TextLabel</string>
          </property>
+         <property name="alignment">
+          <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QDialogButtonBox" name="new_bts">
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Orientation::Horizontal</enum>
+         </property>
          <property name="standardButtons">
-          <set>QDialogButtonBox::Cancel|QDialogButtonBox::No|QDialogButtonBox::Yes</set>
+          <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::No|QDialogButtonBox::StandardButton::Yes</set>
+         </property>
+         <property name="centerButtons">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -608,7 +623,7 @@
           <item>
            <widget class="QLineEdit" name="new_pw_1">
             <property name="echoMode">
-             <enum>QLineEdit::Password</enum>
+             <enum>QLineEdit::EchoMode::Password</enum>
             </property>
            </widget>
           </item>
@@ -627,7 +642,7 @@
           <item>
            <widget class="QLineEdit" name="new_pw_2">
             <property name="echoMode">
-             <enum>QLineEdit::Password</enum>
+             <enum>QLineEdit::EchoMode::Password</enum>
             </property>
            </widget>
           </item>
@@ -649,7 +664,7 @@
           <item>
            <widget class="QDialogButtonBox" name="new_bts_2">
             <property name="standardButtons">
-             <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+             <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
             </property>
            </widget>
           </item>
